--- a/vcweb/core/templates/email/experiment-registration.html
+++ b/vcweb/core/templates/email/experiment-registration.html
@@ -1,15 +1,15 @@
 <h4>{{experiment.display_name}} registration</h4>
 <p>
-You have been registered with the {{ experiment.display_name }} experiment.  You can set your password by visiting:
+You've been registered with the {{ experiment.display_name }}.  You can access the experiment by <a href='//{{experiment.participant_url}}'>logging in to our experiment website</a> using the following credentials:
+
+<ul>
+    <li>Email: {{participant.email}}</li>
+    <li>Password: {{ password }}</li>
+</ul>
+<p>
+If you'd like to reset your password, please visit:
 </p>
 <ul>
     <li>https://vcweb.asu.edu/accounts/password/reset</li>
 </ul>
-<p>
-Your login email address is:
-</p>
-<ul>
-    <li>Email: {{participant.email}}</li>
-</ul>
-
 
