--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -9,7 +9,7 @@
     <div class='alert alert-message'>
         <h4>{{e.status_line}} <span class='pull-right'><span class='badge badge-important'>{{e.participant_set.count}}</span> participants</span></h4>
         <div class='btn-group'>
-            <a class='btn' href='{{e.monitor_url}}'><i class='icon-zoom-in'></i> monitor</a></li>
+            <a class='btn' href='{{e.monitor_url}}'><i class='icon-zoom-in'></i> monitor</a>
             <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the same configuration and no participants.'
                 href='{{e.clone_url}}'><i class='icon-copy'></i> clone</a>
             {% if not e.is_archived %}
@@ -21,7 +21,7 @@
                 <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
             {% else %}
             <a data-content='Remove all participants from the experiment, including any data they may have generated.' href='{{e.controller_url}}/clear-participants' class='btn confirm-experiment-action'>
-                <i class='icon-trash'></i> clear all participants</a></li>
+                <i class='icon-trash'></i> clear all participants</a>
             {% endif %}
             {% if e.is_active %}
             <a data-action='complete' data-content='Mark this experiment as completed' href='{{e.complete_url}}' class='btn confirm-experiment-action'><i class='icon-save'></i> archive</a>
