--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -459,7 +459,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                     <input id='participantGroupId' type='hidden' name='participant_group_id' data-bind='value: $root.participantGroupId'/>
                     <input id='harvestDecisionTextInput' type='hidden' name='integer_decision' data-bind='value: $data'>
                     <div class='harvest-decision-tree' data-bind='click: $root.submitDecision.bind($data, "#multi-select-decision-form" + $data)'>
-                        <img data-bind='attr: { src: $root.resourceImageUrl(), alt: "Harvest " + $data + " tree(s)."  }'><br>
+                        <img width="40" height="40" data-bind='attr: { src: $root.resourceImageUrl(), alt: "Harvest " + $data + " tree(s)."  }'><br>
                         <span style='margin-left: 2px;' class='badge badge-success' data-bind='text: $data'></span>
                     </div>
                 </form>
@@ -568,7 +568,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                 }
                 return 0;
             });
-            model.resourceImageUrl = ko.observable("{{STATIC_URL}}images/forestry/pine-tree.png");
+            model.resourceImageUrl = ko.observable("{{STATIC_URL}}images/boundaries/deciduous-tree.png");
             model.resourceImageBackgroundUrl = ko.observable("url('{{STATIC_URL}}images/forestry/pine-tree.png')");
             model.resourceImageWidth = ko.computed(function() {
                 return model.resourcesToDisplay() * 30 + "px";
@@ -609,6 +609,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                 console.debug("number of trees: " + numberOfTrees);
                 var formData = $(formId).serialize();
                 model.submitted(true);
+                model.harvestDecision(numberOfTrees);
                 console.debug(formData);
                 $.post('submit-harvest-decision', formData, function(response) {
                     console.log(response);
