fixing bugs in boundaries round transitions, including a nasty one in set_harvest_decision that was inactivating all participant round data values for the given participant instead of only the harvest decisions.

--- a/vcweb/boundaries/static/css/boundaries/style.css
+++ b/vcweb/boundaries/static/css/boundaries/style.css
@@ -29,7 +29,13 @@
 .harvest-decision-resources td {
     cursor: pointer;
 }
-.harvest-decision-tree:hover {
-    background-color: yellow;
+.harvest-decision-tree {
+    padding: 3px 3px 3px 8px;
+    margin: 5px 5px 5px 5px;
 }
-
+.harvest-decision-tree:hover {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    background-color: #dff0d8;
+}
