--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -117,6 +117,26 @@
         </li>
     </ul>
 </script>
+<script type='text/html' id='FINAL_DEBRIEFING'>
+    <h2>Experiment Results</h2>
+    <p>
+    Thank you for participating.  As you recall from the initial instructions, we will pay you for one of the two
+    experimental sessions you just completed.  You will select, at random, which session you will be paid for by
+    flipping a coin.  The experimenter will be with you shortly to assist you with this process.  While you wait, please
+    <a target='_blank' data-bind='attr: { href: surveyUrl }'>fill out a final questionnaire by clicking this link.</a>
+    </p>
+    <h2>Payments</h2>
+    <table class='table'>
+        <thead>
+            <tr><th>Session 1</th><th>Session 2</th></tr>
+        </thead>
+        <tbody>
+            <tr><td><span data-bind='text: sessionOneStorage'></span><br><span data-bind='text: sessionOneEarnings'</span></td>
+                <td><span data-bind='text: sessionTwoStorage'></span><br><span data-bind='text: sessionTwoEarnings'></span></td>
+            </tr>
+        </tbody>
+    </table>
+</script>
 <script type='text/html' id='TREATMENT_A_INSTRUCTIONS'>
 <h3>Session <span data-bind='text: sessionId'></span> Instructions</h3>
 <p>
@@ -489,6 +509,12 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
             });
             model.secondsLeft = ko.observable(0);
             model.currentInterval = ko.observable();
+            model.sessionOneEarnings = ko.computed(function() {
+                return formatCurrency(model.sessionOneStorage() * model.exchangeRate());
+                });
+            model.sessionTwoEarnings = ko.computed(function() {
+                return formatCurrency(model.sessionTwoStorage() * model.exchangeRate());
+                });
             model.totalEarnings = ko.computed(function() {
                 return formatCurrency(model.storage() * model.exchangeRate());
             });
