--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -48,10 +48,10 @@
             <ul class='nav pull-right'>
                 {% if request.user.is_authenticated %}
                 <li class='{% active request login %} dropdown'>
-                <a class='dropdown-toggle' data-toggle='dropdown' href='#'><i class='icon-cog'></i><b class='caret'></b></a>
+                <a class='dropdown-toggle' data-toggle='dropdown' href='#'>{{request.user.email}}<i class='icon-cog'></i><b class='caret'></b></a>
                     <ul class='dropdown-menu'>
                         <li><a href='{{ profile }}'>Account</a></li>
-                        <li><a href='{{ logout }}'>Logout ({{request.user.email}})</a></li>
+                        <li><a href='{{ logout }}'>Logout</a></li>
                     </ul>
                 </li>
                 {% else %}
