adding default values for sessionOne/Two storage variables and refactoring client-side earnings calculation a bit

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -507,17 +507,16 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
             model.harvestDecisionOptions = ko.computed(function() {
                 return ko.utils.range(0, model.maxHarvestDecision());
             });
+            model.calculateEarnings = function(quantity) {
+                return function() {
+                    return formatCurrency(quantity * model.exchangeRate());
+                }
+            }
             model.secondsLeft = ko.observable(0);
             model.currentInterval = ko.observable();
-            model.sessionOneEarnings = ko.computed(function() {
-                return formatCurrency(model.sessionOneStorage() * model.exchangeRate());
-                });
-            model.sessionTwoEarnings = ko.computed(function() {
-                return formatCurrency(model.sessionTwoStorage() * model.exchangeRate());
-                });
-            model.totalEarnings = ko.computed(function() {
-                return formatCurrency(model.storage() * model.exchangeRate());
-            });
+            model.sessionOneEarnings = ko.computed(model.calculateEarnings(model.sessionOneStorage()));
+            model.sessionTwoEarnings = ko.computed(model.calculateEarnings(model.sessionTwoStorage()));
+            model.totalEarnings = ko.computed(model.calculateEarnings(model.storage()));
             model.templateId = ko.computed(function() {
                 switch ( model.templateName() ) {
                     case 'PRACTICE':
