fixing survey_url construction and last_round debriefing session storage variable logic
--HG--
extra : transplant_source : %946%8F%AC_%22%8BU%B5b%9D%BDn4%91%EBz%BE%8F%01

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -75,6 +75,7 @@
     </p>
     <p>
     We will now move on to the <strong>paid rounds.</strong>
+    Before you continue, please <a data-bind='attr: { href: surveyUrl }'>fill out a final questionnaire by clicking this link.</a>
     </p>
     <ul class='pager'>
         <li class='next'>
@@ -123,7 +124,7 @@
     Thank you for participating.  As you recall from the initial instructions, we will pay you for one of the two
     experimental sessions you just completed.  You will select, at random, which session you will be paid for by
     flipping a coin.  The experimenter will be with you shortly to assist you with this process.  While you wait, please
-    <a target='_blank' data-bind='attr: { href: surveyUrl }'>fill out a final questionnaire by clicking this link.</a>
+    <a data-bind='attr: { href: surveyUrl }'>fill out a final questionnaire by clicking this link.</a>
     </p>
     <h2>Payments</h2>
     <table class='table'>
