renaming boundaries experiment app name for consistency, fixes issue 103
--HG--
rename : vcweb/boundaries/__init__.py => vcweb/bound/__init__.py
rename : vcweb/boundaries/fixtures/boundaries_experiment_metadata.json => vcweb/bound/fixtures/bound_experiment_metadata.json
rename : vcweb/boundaries/fixtures/boundaries_parameters.json => vcweb/bound/fixtures/bound_parameters.json
rename : vcweb/boundaries/forms.py => vcweb/bound/forms.py
rename : vcweb/boundaries/migrations/0001_initial.py => vcweb/bound/migrations/0001_initial.py
rename : vcweb/boundaries/migrations/0002_max_harvest_decision.py => vcweb/bound/migrations/0002_max_harvest_decision.py
rename : vcweb/boundaries/migrations/__init__.py => vcweb/bound/migrations/__init__.py
rename : vcweb/boundaries/models.py => vcweb/bound/models.py
rename : vcweb/boundaries/static/css/boundaries/style.css => vcweb/bound/static/css/bound/style.css
rename : vcweb/boundaries/static/images/boundaries/deciduous-tree.png => vcweb/bound/static/images/bound/deciduous-tree.png
rename : vcweb/boundaries/templates/boundaries/participate.html => vcweb/bound/templates/bound/participate.html
rename : vcweb/boundaries/tests.py => vcweb/bound/tests.py
rename : vcweb/boundaries/urls.py => vcweb/bound/urls.py
rename : vcweb/boundaries/views.py => vcweb/bound/views.py

--- a/vcweb/bound/static/css/bound/style.css
+++ b/vcweb/bound/static/css/bound/style.css
@@ -13,14 +13,14 @@
 }
 #chatMessage {
 }
-.boundaries-status-dashboard p {
+.bound-status-dashboard p {
     padding-top: 15px;
     font-size: 2em;
 }
-.boundaries-status-dashboard h4 {
+.bound-status-dashboard h4 {
     border-bottom: 1px solid #ccc;
 }
-.boundaries-status-dashboard {
+.bound-status-dashboard {
     height: 100px;
     width: 110px;
     margin-right: 0px;
