--- a/vcweb/bound/static/css/bound/style.css
+++ b/vcweb/bound/static/css/bound/style.css
@@ -26,18 +26,35 @@
     margin-right: 0px;
     padding: 8px 8px 8px 8px;
 }
-.harvest-decision-resources td {
-    cursor: pointer;
+.zero-harvest-decision {
+    margin: 0 0 0 -5px;
+    width: 40px;
+    height: 40px;
+    background: url('/static/images/bound/zero-trees-inactive.png');
+}
+.zero-harvest-decision.selected {
+    background: url('/static/images/bound/zero-trees-active.png') !important;
+}
+.zero-harvest-decision:hover {
+    background: url('/static/images/bound/zero-trees-hover.png');
 }
 .harvest-decision-tree {
-    padding: 3px 3px 3px 8px;
-    margin: 5px 5px 5px 5px;
+    padding: 0 0 0 0;
+    margin: 0 0 0 -5px;
+    width: 40px;
+    height: 40px;
+    background: url('/static/images/bound/tree-inactive.png');
+}
+.harvest-decision-tree.selected {
+    background: url('/static/images/bound/tree-active.png') !important;
 }
 .harvest-decision-tree:hover {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    background-color: #dff0d8;
+    background: url('/static/images/bound/tree-hover.png');
+}
+.harvest-decision-tree-div {
+    cursor: pointer;
+    padding: 3px 3px 3px 8px;
+    margin: 5px 5px 5px 5px;
 }
 col.current-player {
     background-color: #ffb914;
