unclosed div tag

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -477,6 +477,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
     </tbody>
 </table>
 </div>
+</div>
 </script>
 <script type='text/html' id='harvest-decision-click-template'>
     <table class='table'>
