--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -396,30 +396,34 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
         </table>
     </div>
 </div>
-<div class='row' data-bind='template: { name: "resource-visualization-template" }'></div>
+<div class='row'>
+    <div class='span8' data-bind='template: { name: "resource-visualization-template" }'></div>
+</div>
 <div class='row' data-bind='ifnot: isResourceEmpty()'>
-<h3>Harvest</h3>
-<div data-bind='if: submitted'>
-    <div class='alert alert-success'>
-        <i class='icon-leaf'></i> You have submitted a harvest decision for <span class='badge badge-info'
-        data-bind='text: harvestDecision'></span> trees.  Please wait quietly while the rest of the participants submit
-        their decisions.
-    </div>
-</div>
-<div data-bind='ifnot: alive'>
-    <div class='alert alert-error'>
-        <b><i class='icon-ambulance'></i></b> You didn't harvest enough trees to meet the cost of living and are now
-        <b>deceased</b>.  You will not be able to chat or submit harvest decisions until this session is over.
-    </div>
-</div>
-<div data-bind='ifnot: isResourceEmpty'>
-    <form id='vcweb-form' method='post' class='form-horizontal' >
-        {% csrf_token %}
-        <div id='harvestDecisionDiv' class='control-group'>
-            <div data-bind='template: { name: "harvest-decision-click-template" }'></div>
+    <div class='span8'>
+        <h3>Harvest</h3>
+        <div data-bind='if: submitted'>
+            <div class='alert alert-success'>
+                <i class='icon-leaf'></i> You have submitted a harvest decision for <span class='badge badge-info'
+                    data-bind='text: harvestDecision'></span> trees.  Please wait quietly while the rest of the participants submit
+                their decisions.
+            </div>
         </div>
-    </form>
-</div>
+        <div data-bind='ifnot: alive'>
+            <div class='alert alert-error'>
+                <b><i class='icon-ambulance'></i></b> You didn't harvest enough trees to meet the cost of living and are now
+                <b>deceased</b>.  You will not be able to chat or submit harvest decisions until this session is over.
+            </div>
+        </div>
+        <div data-bind='ifnot: isResourceEmpty'>
+            <form id='vcweb-form' method='post' class='form-horizontal' >
+                {% csrf_token %}
+                <div id='harvestDecisionDiv' class='control-group'>
+                    <div data-bind='template: { name: "harvest-decision-click-template" }'></div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 </script>
 <script type='text/html' id='resource-visualization-template'>
@@ -430,7 +434,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
     </div>
 </div>
 
-<div data-bind='css: { "span4": canObserveOtherGroup }'>
+<div data-bind='css: { span4: canObserveOtherGroup }'>
 <h4>My Group</h4>
 <div class='alert alert-message'><strong class='badge badge-success' data-bind='text:resourceLevel'></strong> trees</div>
 <div data-bind="visible: isResourceEmpty">
@@ -445,6 +449,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
 {% comment %} FIXME: crummy use of "px" concatenation, use something like inPixels(..) instead? {% endcomment %}
 <div data-bind='style: { width: remainderResourceImageWidth(resourceLevel), height: resourceImageHeight() + "px", background: resourceImageBackgroundUrl }'></div>
 </div>
+<br>
 <table class='table table-bordered table-condensed table-striped'>
     <tbody>
         <tr><td>forest</td><td data-bind='text:resourceLevel'></td></tr>
@@ -455,28 +460,30 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
 </table>
 </div>
 
-<div data-bind='if: canObserveOtherGroup' class='span4'>
-<h4>Other Group</h4>
-<div class='alert alert-message'><strong class='badge badge-success' data-bind='text:otherGroupResourceLevel'></strong> trees</div>
-<div data-bind="visible: isResourceEmpty">
-    <div class='well'>
-    <center><img alt='deforested' src="{% static 'images/forestry/deforestation.jpg' %}" class="img-polaroid" width="425" height="282"></center>
+<div data-bind='if: canObserveOtherGroup'>
+    <div class='span4'>
+        <h4>Other Group</h4>
+        <div class='alert alert-message'><strong class='badge badge-success' data-bind='text:otherGroupResourceLevel'></strong> trees</div>
+        <div data-bind="visible: isResourceEmpty">
+            <div class='well'>
+                <center><img alt='deforested' src="{% static 'images/forestry/deforestation.jpg' %}" class="img-polaroid" width="425" height="282"></center>
+            </div>
+            <div class='alert alert-error'><i class='icon-warning-sign'></i> There are no more trees to harvest.</div>
+        </div>
+        <div data-bind='ifnot: isResourceEmpty'>
+            <div data-bind='style: { width: blockResourceVisualizationImageWidth(otherGroupResourceLevel), height: blockResourceVisualizationImageHeight(otherGroupResourceLevel), background: resourceImageBackgroundUrl }'></div>
+            {% comment %} FIXME: crummy use of "px" concatenation, use something like inPixels(..) instead? {% endcomment %}
+            <div data-bind='style: { width: remainderResourceImageWidth(otherGroupResourceLevel), height: resourceImageHeight() + "px", background: resourceImageBackgroundUrl }'></div>
+        </div>
+        <table class='table table-bordered table-condensed table-striped'>
+            <tbody>
+                <tr><td>forest</td><td data-bind='text:otherGroupResourceLevel()'></td></tr>
+                <tr><td>average harvest</td><td data-bind='text:otherGroupAverageHarvest().toFixed(1)'></td></tr>
+                <tr><td>average earnings</td><td data-bind='text:otherGroupAverageStorage().toFixed(1)'></td></tr>
+                <tr><td>number alive</td><td data-bind='text:otherGroupNumberAlive'></td></tr>
+            </tbody>
+        </table>
     </div>
-    <div class='alert alert-error'><i class='icon-warning-sign'></i> There are no more trees to harvest.</div>
-</div>
-<div data-bind='ifnot: isResourceEmpty'>
-<div data-bind='style: { width: blockResourceVisualizationImageWidth(otherGroupResourceLevel), height: blockResourceVisualizationImageHeight(otherGroupResourceLevel), background: resourceImageBackgroundUrl }'></div>
-{% comment %} FIXME: crummy use of "px" concatenation, use something like inPixels(..) instead? {% endcomment %}
-<div data-bind='style: { width: remainderResourceImageWidth(otherGroupResourceLevel), height: resourceImageHeight() + "px", background: resourceImageBackgroundUrl }'></div>
-</div>
-<table class='table table-bordered table-condensed table-striped'>
-    <tbody>
-        <tr><td>forest</td><td data-bind='text:otherGroupResourceLevel()'></td></tr>
-        <tr><td>average harvest</td><td data-bind='text:otherGroupAverageHarvest().toFixed(1)'></td></tr>
-        <tr><td>average earnings</td><td data-bind='text:otherGroupAverageStorage().toFixed(1)'></td></tr>
-        <tr><td>number alive</td><td data-bind='text:otherGroupNumberAlive'></td></tr>
-    </tbody>
-</table>
 </div>
 </script>
 <script type='text/html' id='harvest-decision-click-template'>
@@ -604,7 +611,7 @@ the countdown reaches zero, any value you have selected will be auto-submitted. 
                     return 37;
                 }
                 else {
-                    return 80;
+                    return 77;
                 }
             });
             model.resourceImageWidth = ko.observable(10);
